reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_hashset_field-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithHashSetField"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithHashSetField"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.TestStructWithHashSetField": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.TestStructWithHashSetField",
        "required": [
          "_f_hashset"
        ],
        "properties": {
          "_f_hashset": {
            "description": "Value set type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/u8"
            },
            "uniqueItems": true
          }
        }
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
