reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_hashset_field.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithHashSetField"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithHashSetField"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithHashSetField",
        "fields": {
          "named": [
            {
              "name": "_f_hashset",
              "type": {
                "name": "std::collections::HashSet",
                "arguments": [
                  {
                    "name": "u8"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashSet",
        "description": "Value set type",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "arguments": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithHashSetField",
        "fields": {
          "named": [
            {
              "name": "_f_hashset",
              "type": {
                "name": "std::collections::HashSet",
                "arguments": [
                  {
                    "name": "u8"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashSet",
        "description": "Value set type",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "arguments": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
